<resources>
    <string name="app_name">Sinyal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iconLogin">Just a decorative icon for login</string>
    <string name="iconRegister">Just a decorative icon for registration</string>
    <string name="registerDescription">Kindly provide your account information</string>
    <string name="storySplash">Don\'t have someone to share stories with? Share them here!</string>
    <string name="bottomSplash">Crafted by Bangkit Cohort</string>
    <string name="createAccount">Create an Account</string>
    <string name="btnFloating">to create new content</string>
    <string name="noData">No data available</string>
    <string name="home">Main Page</string>
    <string name="scrollView">For scrolling items</string>
    <string name="detail_title">%1$s\'s Tale</string>
    <string name="post_as">Share your story as </string>
    <string name="post_users">Compose a new story</string>
    <string name="message">Message  :</string>
    <string name="login_description">Hello, welcome to Tale App</string>


    <string name="cameraChoose">Camera</string>
    <string name="galleryChoose">Gallery</string>
    <string name="descriptionStory">Story Description</string>
    <string name="storyImageDesc">Story Image Desc</string>
    <string name="btnPost">Share Story</string>
    <string name="choose_picture">Select an Image</string>
    <string name="choose_camera">Select from Camera</string>

    <string name="nameUser">Name</string>
    <string name="timeCreatedContent">April 13, 2023, 12:18:54</string>
    <string name="content">This image is part of the story</string>
    <string name="imageDataNone">Displayed when there\'s no data</string>

    <string name="username">Enter your email username</string>

    <string name="email">Enter your email address</string>
    <string name="emailFormatWrong">Incorrect email format</string>
    <string name="emailTaken">The email you\'ve entered is already registered, please use a different email</string>

    <string name="password">Enter your password</string>
    <string name="passwordConfirm">Confirm your password</string>
    <string name="passwordVisible">Show Password</string>
    <string name="passwordLess">Password must be at least 8 characters</string>
    <string name="passwordNotMatch">Passwords do not match</string>
    <string name="passwordAccountWrong">The password you entered is incorrect</string>

    <string name="tvLogin">Sign In</string>
    <string name="login_button">Sign In</string>
    <string name="invalidLogin">Please enter your account details correctly!</string>
    <string name="registerHeader">Register an Account</string>
    <string name="register">Don\'t have an account yet?</string>
    <string name="register_button">Register</string>
    <string name="registerCreate">Create an Account</string>
    <string name="logout">Log Out</string>
    <string name="logoutDescription">Are you sure you want to log out?</string>
    <string name="logoutButton">Log Out</string>
    <string name="SuccessLogout">Successfully logged out</string>
    <string name="cancelLogout">Cancel</string>


    <string name="nameNone">Name cannot be empty</string>
    <string name="emailNone">Email cannot be empty</string>
    <string name="passwordNone">Password cannot be empty</string>
    <string name="passwordConfirmNone">Confirming the password cannot be empty</string>
    <string name="name">Enter your full name</string>

    <string name="imageStoryUploadDesc">This is the image when a photo is selected</string>
    <string name="imageSplashDesc">This is the Bangkit logo on the splash screen</string>
    <string name="warningAddImage">Please upload a photo first</string>
    <string name="warningAddDescription">Please add a description first</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is a widget description</string>

    <string name="package_name">com.example.storys</string>


    <string name="title_activity_maps">Map Activity</string>
    <string name="maps">View Maps</string>

    <string name="standardMap">Standard Map View</string>
    <string name="nightMap">Night Mode Map View</string>

    <string name="useMyLocation">Use My Current Location</string>
    <string name="usePickLocation">Use the Manually Selected Location</string>
    <string name="pickLocation">Tap on the Map to Choose a Location</string>
    <string name="icon_map_pin">Map Pin Icon</string>
    <string name="yourLocation">Your Current Location</string>
    <string name="start_point">Starting Point</string>
    <string name="accountSuccessCreated">Yippee! Your Account Has Been Successfully Created</string>
    <string name="tryAgain">Try Again</string>
    <string name="locationNotFound">Location Not Found. Please Try Again</string>
    <string name="imageStoryDesc">This includes images from the story</string>
    <string name="dateStory">Story created on:</string>
    <string name="useThisLocation">Use This Location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>