<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login"
        android:layout_width="114dp"
        android:layout_height="109dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/iconLogin"
        android:src="@drawable/story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/login_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:alpha="0"
        tools:alpha="1"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tvLogin"
        android:contentDescription="@string/iconLogin"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <com.example.sinyal.customview.Email
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/tvDesc"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <com.example.sinyal.customview.Password
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        tools:alpha="1"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/tvDesc"
        app:layout_constraintStart_toStartOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        tools:alpha="1"
        android:backgroundTint="#FFDFDF"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/passVisible"/>

    <TextView
        android:id="@+id/tvRegistDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <CheckBox
        android:id="@+id/passVisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/passwordVisible"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:alpha="0"
        tools:alpha="1"
        android:text="@string/register_button"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvRegistDesc"
        app:layout_constraintTop_toTopOf="@+id/tvRegistDesc" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>